<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find my sheep</string>
    <string name="action_settings">Settings</string>
    <string name="invalid">Invalid </string>
    <string name="tbPassword">ToggleButton </string>
    <string name="teUser">Username </string>
    <string name="tePassword">Password </string>
    <string name="teRecoveryKey">Recovery key</string>
    <string name="teRecovery">Enter the username of your account. A Recovery email will be sent to the email address associated with your account</string>
    <string name="b3Send">Send</string>
    <string name="teNewPassword">Enter your new password</string>
    <string name="b3Reset">Reset Password</string>
    <string name="b3Recover">Recover Password</string>
    <string name="b3Login">Login </string>
    <string name="b3Reg">Register </string>
    <string name="etName">Enter name </string>
    <string name="etEmail">Email </string>
    <string name="etEmail2">Validate email </string>
    <string name="tePassword2">password again </string>
    <string name="title_activity_reg_user">RegUser</string>
    <string name="etTlf">Phonenummer </string>
    <string name="action_logout">Log out </string>
    <string name="action_sat">Satellite view </string>
    <string name="action_map">Map view </string>
    <string name="action_ter">Terrain view </string>
    <string name="title_activity_recover_password">RecoverPassword</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="etSheepName">Name</string>
    <string name="etSheepAge">Age</string>
    <string name="etSheepWeight">Weight</string>
    <string name="etSheepHealth">Health</string>
    <string name="title_activity_register_sheep">RegisterSheep</string>
    <string name="b3newSheep">New sheep</string>
    <string name="sheepMenu">Sheep</string>
    <string name="userMenu">Profile</string>
    <string name="b3sheepReg">Add sheep</string>
    <string name="b6edituser">Edit</string>
    <string name="etOldPass">Enter old password</string>
    <string name="etNewPass">Enter new password</string>
    <string name="profileEdit">Edit profile</string>
    <string name="change_sheep">View/edit sheep information</string>
    <string name="b3editSheep">Done</string>
    <string name="editSheep">Edit sheep</string>
    <string name="delete_sheep">Delete</string>
    <string name="sheep_log">Show log</string>

</resources>
