<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    
    <item
        android:id="@+id/action_sat"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sat"/>
    
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_map"/>
    
    <item
        android:id="@+id/action_ter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_ter"/>
    
    <item android:id="@+id/sheep_menu"
          android:title="@string/sheepMenu"
          android:showAsAction="always" />
    <item android:id="@+id/user_menu"
          android:title="@string/userMenu"
          android:showAsAction="always" />
    

</menu>
